crates/kula-lsp/src/features/snapshots/kula_lsp__features__document_symbol__tests__snapshot_polygamous_family.snap
---
source: crates/kula-lsp/src/features/document_symbol.rs
expression: syms
---
[
  {
    "name": "Alice Sharma",
    "detail": "b. 1950",
    "kind": 13,
    "range": {
      "start": {
        "line": 8,
        "character": 0
      },
      "end": {
        "line": 8,
        "character": 66
      }
    },
    "selectionRange": {
      "start": {
        "line": 8,
        "character": 7
      },
      "end": {
        "line": 8,
        "character": 12
      }
    }
  },
  {
    "name": "Devraj Kumar",
    "detail": "b. 1948",
    "kind": 13,
    "range": {
      "start": {
        "line": 9,
        "character": 0
      },
      "end": {
        "line": 9,
        "character": 66
      }
    },
    "selectionRange": {
      "start": {
        "line": 9,
        "character": 7
      },
      "end": {
        "line": 9,
        "character": 13
      }
    }
  },
  {
    "name": "Meera",
    "detail": "b. 1955",
    "kind": 13,
    "range": {
      "start": {
        "line": 10,
        "character": 0
      },
      "end": {
        "line": 10,
        "character": 66
      }
    },
    "selectionRange": {
      "start": {
        "line": 10,
        "character": 7
      },
      "end": {
        "line": 10,
        "character": 12
      }
    }
  },
  {
    "name": "Priya Kumar",
    "detail": "b. 1994",
    "kind": 13,
    "range": {
      "start": {
        "line": 12,
        "character": 0
      },
      "end": {
        "line": 13,
        "character": 22
      }
    },
    "selectionRange": {
      "start": {
        "line": 12,
        "character": 7
      },
      "end": {
        "line": 12,
        "character": 12
      }
    },
    "children": [
      {
        "name": "birth m_alice_devraj",
        "kind": 8,
        "range": {
          "start": {
            "line": 13,
            "character": 2
          },
          "end": {
            "line": 13,
            "character": 22
          }
        },
        "selectionRange": {
          "start": {
            "line": 13,
            "character": 2
          },
          "end": {
            "line": 13,
            "character": 7
          }
        }
      }
    ]
  },
  {
    "name": "Devraj Kumar & Meera",
    "detail": "1990",
    "kind": 24,
    "range": {
      "start": {
        "line": 15,
        "character": 0
      },
      "end": {
        "line": 15,
        "character": 55
      }
    },
    "selectionRange": {
      "start": {
        "line": 15,
        "character": 9
      },
      "end": {
        "line": 15,
        "character": 23
      }
    }
  },
  {
    "name": "Alice Sharma & Devraj Kumar",
    "detail": "1992",
    "kind": 24,
    "range": {
      "start": {
        "line": 16,
        "character": 0
      },
      "end": {
        "line": 16,
        "character": 55
      }
    },
    "selectionRange": {
      "start": {
        "line": 16,
        "character": 9
      },
      "end": {
        "line": 16,
        "character": 23
      }
    }
  }
]
