crates/kula-lsp/src/features/snapshots/kula_lsp__features__document_symbol__tests__snapshot_single_couple.snap
---
source: crates/kula-lsp/src/features/document_symbol.rs
expression: syms
---
[
  {
    "name": "Alice Sharma",
    "detail": "b. 1950",
    "kind": 13,
    "range": {
      "start": {
        "line": 5,
        "character": 0
      },
      "end": {
        "line": 5,
        "character": 62
      }
    },
    "selectionRange": {
      "start": {
        "line": 5,
        "character": 7
      },
      "end": {
        "line": 5,
        "character": 12
      }
    }
  },
  {
    "name": "Bob Sharma",
    "detail": "b. 1948",
    "kind": 13,
    "range": {
      "start": {
        "line": 6,
        "character": 0
      },
      "end": {
        "line": 6,
        "character": 60
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 7
      },
      "end": {
        "line": 6,
        "character": 10
      }
    }
  },
  {
    "name": "Alice Sharma & Bob Sharma",
    "detail": "1972",
    "kind": 24,
    "range": {
      "start": {
        "line": 8,
        "character": 0
      },
      "end": {
        "line": 8,
        "character": 47
      }
    },
    "selectionRange": {
      "start": {
        "line": 8,
        "character": 9
      },
      "end": {
        "line": 8,
        "character": 20
      }
    }
  }
]
